<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <View android:layout_width="match_parent"
        android:layout_height="1px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/line" />
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="97px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btn_voice"
            android:layout_width="70px"
            android:layout_height="70px"
            android:layout_margin="10px"
            android:background="@drawable/ic_cheat_voice"/>
        <ImageButton
            android:id="@+id/btn_keyboard"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            android:background="@drawable/ic_keyboard_input"/>
        <TextView
            android:id="@+id/voice_panel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/chat_press_talk"
            android:gravity="center"
            android:textColor="@color/text_gray1"
            android:textSize="16sp"
            android:clickable="true"
            android:background="@drawable/btn_voice_normal">

        </TextView>
        <LinearLayout
            android:id="@+id/text_panel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_inputbox"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/input"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textCursorDrawable="@null"
                android:background="@null"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
            <ImageButton
                android:id="@+id/btnEmoticon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_face_input"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_add_input"/>
        <ImageButton
            android:id="@+id/btn_send"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="86px"
            android:layout_height="70px"
            android:layout_marginRight="8px"
            android:background="@drawable/shape_session_btn_send"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="gone"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoFrameLayout
        android:id="@+id/flEmotionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="350px"
        android:visibility="gone">
        <!--表情-->
        <com.lqr.emoji.EmotionLayout
            android:id="@+id/elEmotion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />
        <!--其他功能-->
        <include
            android:id="@+id/llMore"
            layout="@layout/include_func_layout"
            android:visibility="gone"/>
    </com.zhy.autolayout.AutoFrameLayout>
    <LinearLayout
        android:id="@+id/morePanel"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/background_gray1">
        <View android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <LinearLayout
                android:id="@+id/btn_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginLeft="40dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/chat_image"
                    android:textColor="@color/text_gray1"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_photography"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/chat_photo"
                    android:textColor="@color/text_gray1"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="40dp"
                android:gravity="center_horizontal"
                android:layout_alignParentRight="true">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_video"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/chat_video"
                    android:textColor="@color/text_gray1"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <LinearLayout
                android:id="@+id/btn_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginLeft="40dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_file"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/chat_file"
                    android:textColor="@color/text_gray1"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/emoticonPanel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="@color/background_gray1">

    </LinearLayout>

</LinearLayout>